enhance journey card style

--- a/tfl-stats.Client/src/App.css
+++ b/tfl-stats.Client/src/App.css
@@ -126,6 +126,7 @@
 
 .journey-container {
     margin-top: 30px;
+
 }
 
 .journey-card {
@@ -133,10 +134,12 @@
     border: 2px solid #ddd;
     padding: 20px;
     border-radius: 10px;
-    margin-bottom: 20px;
+    margin: 20px auto; 
     box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s, box-shadow 0.3s;
+    max-width: 600px; 
 }
+
 
     .journey-card:hover {
         transform: scale(1.03);
